# connect

./: .dockerignore  .gitignore  README.docker.md  README.git.md  README.md  docker-compose.yaml  staging.session.sql  workspace.code-workspace
Excel2Json/: data.json  data.xlsm
aio/: Makefile  README.rst  aio.sh  setup.py
aio/api/: __init__.py  __main__.py  api.py  app_env.py
aio/config/: production.json  production.yaml
aio/sql/: create_tables.sql
aio/sql/dump/: oauth2_users.sql
aio/tdd/: switch.py
aiohttp-admin/: aiohttp-admin.sh  setup.py
aiohttp-admin/app/: client.py  main.py
aiohttp-admin/config/: app.yaml
aiohttp-admin/templates/: index.html  results.html
aiows/app/: Message.py  __main__.py  conn.py
aiows/tdd/: aio_tcp_server.py  cffi_01.py  echo_server.py  parser.py
backend/: .dockerignore  .gitignore_global  Dockerfile  Dockerfile-alternate  README.alembic.md  README.docker.md  README.git.md  README.hash.md  README.md  README.pip.md  README.requirements.md  alembic.ini  cli.py  cli2.py  hello.py  index.html  logging.yaml  req_5k.py  req_80.py  req_8k.py  requirements.txt  serve.py  server.sh  setup.sh  ws_cli.py  ws_srv.py
backend/app/: __init__.py  __main__.py  config.py  env.py  main.py
backend/app/api/: __init__.py  api_ren_user.py  api_user.py
backend/app/db/migrations/versions/: d306cd20266d_0.py
backend/app/models/: __init__.py  battle.py  user.py
backend/connect/: __init__.py  applications.py  build.py  config.py  doxygen.py  function.py  functools.py  gzip.py  header.py  jwt.py  logger.py  message.py  method.py  post_c.pyx  profile.py  routing.py  setup.py  types.py  utils.py
backend/connect/tdd/: logger-ex1.py
backend/env/: development.yaml
backend/logs/: info.log.2021-04-14  info.log.2021-04-17  info.log.2021-04-19
backend/message/: __init__.py  applications.py  logger.py
boost/: CMakeLists.txt
boost/CMake/: CMakeLists.txt
boost/chat_client/: CMakeLists.txt  Untitled.code-workspace
boost/chat_client/src/: chat_client.cpp  message.hpp
boost/chat_server/: CMakeLists.txt  Untitled.code-workspace
boost/chat_server/src/: asio1.cpp  asio2.cpp  asio3.cpp  asio4.cpp  asio5.cpp  asio_server.cpp  boost_asio.cpp  chat_server.cpp  pipeline.cpp  server.hpp
boost/src/: asio-server.cpp
cpp/: CMakeLists.txt
cpp/src/: server.cpp
db/: user.sql
nodejs/app/: app.js  main.js  package.json  server.js
websockets/aiows/app/: __init__.py  handler.py  server.py
websockets/aiows/app/api/: main.py
websockets/aiows/app/models/: users.py
websockets/aiows/tdd/: parser.py
